compiler/tests/sct-checker/fail/spill.jazz
fn spill2(
    #public reg u64 pub,
    #secret reg u64 sec
) ->
    #public reg u64
{
    reg u64 msf;
    msf = #init_msf();
    () = #spill(pub, sec);
    [pub] = sec;
    () = #unspill(pub, sec);
    [pub] = sec;
    return pub;
}
